@@ -233,9 +233,14 @@ public class QuantumVxlGameProvider implements GameProvider {
             if (commonGameJarDeclared) {
                 classifier.process(clientJar);
             }
+            List<Exception> suppressedExceptions = new ArrayList<>();
 
             // Process the launcher class path
             classifier.process(launcher.getClassPath());
+
+            for (Path path : launcher.getClassPath()) {
+                System.out.println(path);
+            }
 
             // Get the client and server jars from the classifier
             clientJar = classifier.getOrigin(GameLibrary.QUANTUM_VXL_CLIENT);
@@ -245,20 +250,38 @@ public class QuantumVxlGameProvider implements GameProvider {
             // Warn if the common game jar didn't contain any of the expected classes
             if (commonGameJarDeclared && clientJar == null) {
                 Log.warn(LogCategory.GAME_PROVIDER, "The declared common game jar didn't contain any of the expected classes!");
+                suppressedExceptions.add(new FormattedException("The declared common game jar didn't contain any of the expected classes!", "The declared common game jar didn't contain any of the expected classes!"));
             }
 
             // Add the client and server jars to the game jars list
             if (clientJar != null) {
                 this.gameJars.add(clientJar);
+            } else {
+                suppressedExceptions.add(new FormattedException("No client jar found", "No client jar found for Quantum Voxel"));
             }
             if (serverJar != null) {
                 this.gameJars.add(serverJar);
+            } else {
+                suppressedExceptions.add(new FormattedException("No server jar found", "No server jar found for Quantum Voxel"));
             }
             if (this.libGdxJar != null) {
                 this.gameJars.add(this.libGdxJar);
+            } else {
+                suppressedExceptions.add(new FormattedException("No libgdx jar found", "No libgdx jar found for Quantum Voxel"));
             }
 
-            // Get the entry point class name from the classifier
+            if (this.gameJars.isEmpty()) {
+                if (!suppressedExceptions.isEmpty()) {
+                    FormattedException noGameJarFound = new FormattedException("No game jar found", "No game jar found for Quantum Voxel");
+
+                    for (Exception e : suppressedExceptions) {
+                        noGameJarFound.addSuppressed(e);
+                    }
+                    throw noGameJarFound;
+                }
+                throw new FormattedException("No game jar found", "No game jar found for Quantum Voxel");
+            }
+
             // Get the entry point class name from the classifier
             this.entrypoint = classifier.getClassName(clientLib);
             if (this.entrypoint == null) {
@@ -300,7 +323,7 @@ public class QuantumVxlGameProvider implements GameProvider {
         // Expose game jar locations to the FabricLoader share
         var share = FabricLoaderImpl.INSTANCE.getObjectShare();
 
-        share.put("fabric-loader:inputGameJar", this.gameJars.get(0));
+        share.put("fabric-loader:inputGameJar", this.gameJars.getFirst());
         share.put("fabric-loader:inputGameJars", this.gameJars);
 
         return true;
